tests/variant_flow/coverage_multiple_missing_reported.sim

            enum E { A: i64 B: i64 C: i64 }
            fn f(e: E) {
              entry:
                switchEnum(e) [A: end]
              end: return
            }
            